[project]
name = "fileconfig"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Config file sections as objects"
keywords = ["configuration", "ini file", "inheritance", "aliasing"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/fileconfig"
"Issue Tracker" = "https://github.com/xflr6/fileconfig/issues"
CI = "https://github.com/xflr6/fileconfig/actions"
Coverage = "https://codecov.io/gh/xflr6/fileconfig"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "mypy", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = ["pytest>=7", "pytest-cov"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "fileconfig.__version__" }

[tool.mypy]
packages = ["fileconfig"]

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "fileconfig", "tests"]
addopts = [
  "--doctest-modules", 
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["fileconfig"]
branch = false

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{314,313,312,311,310}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python -X dev run-tests.py {posargs}
"""
