[project]
name = "fileconfig"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Config file sections as objects"
keywords = ["configuration", "ini file", "inheritance", "aliasing"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/fileconfig"
Documentation = "https://github.com/xflr6/fileconfig/blob/master/README.rst"
Changelog = "https://github.com/xflr6/fileconfig/blob/master/CHANGES.rst"
"Issue Tracker" = "https://github.com/xflr6/fileconfig/issues"
CI = "https://github.com/xflr6/fileconfig/actions"
Coverage = "https://app.codecov.io/gh/xflr6/fileconfig"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "fileconfig.__version__" }

[dependency-groups]
dev = [  # $ pip install . --group dev
  "build",
  "tox",
  "twine",
  "wheel",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]
test = [
  "coverage",
  "pytest>=7",
  "pytest-cov",
]
typing = [
  "mypy",
]

[tool.mypy]
packages = ["fileconfig"]
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
#check_untyped_defs = true
disallow_subclassing_any = true

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["README.rst", "fileconfig", "tests"]
addopts = [
  "--doctest-modules", 
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["fileconfig"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
