[metadata]
license_file = LICENSE

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.3
testpaths = README.rst fileconfig tests
addopts =
  --doctest-modules --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html

[coverage:run]
source = fileconfig
branch = true

[flake8]
ignore = E126,E128
max-line-length = 100
